# NeoVLM

./: .gitignore  LICENSE  Makefile  README.md  SETUP_STATUS.md  THIRD_PARTY.md  pyproject.toml  requirements-analysis.txt  requirements-carla.txt  requirements-vlm.txt
configs/: baseline.yaml
docs/: RUNBOOK.md
environments/: analysis.lock.yml  analysis.yml  carla.lock.yml  carla.yml  vlm.lock.yml  vlm.yml
notes/: current_execution_plan.md  future_paper_ideas.md  setup_conversation_summary.md  thesis_core_idea.md  thesis_gap_analysis.md
scripts/: build_feature_cache_dataset.sh  carla_status.sh  check_bench2drive.sh  check_carla.sh  check_docker_gpu.sh  check_gpu.sh  check_research_code.sh  check_torch.sh  install_nvidia_container_toolkit.sh  install_system_packages.sh  run_bc_bridge_smoke.sh  run_bc_rollout_smoke.sh  run_bc_smoke.sh  run_bc_train.sh  run_carla_dataset_collect.sh  run_carla_dataset_smoke.sh  run_carla_rollout_smoke.sh  run_carla_server.sh  run_carla_window.sh  run_dataset_stats.sh  run_eval_report.sh  run_feature_cache_smoke.sh  run_policy_server.sh  run_smoke_tests.sh  run_token_pipeline_smoke.sh  run_vlm_provider_smoke.sh  start_carla_server_detached.sh  start_carla_window_detached.sh  validate_carla_dataset.py
tests/: test_bc_agent.py  test_bc_training.py  test_cache.py  test_carla_marked.py  test_config.py  test_dataset_split.py  test_dataset_stats.py  test_eval_metrics.py  test_feature_cache.py  test_il_dataset.py  test_models.py  test_observations.py  test_policy_bridge.py  test_qwen_provider.py  test_reward.py  test_route_progress.py  (+3 more)
(+44 files in other folders)
