[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-driving"
version = "0.1.0"
description = "Research components for VLM-guided closed-loop autonomous driving."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Furkan Hanilçi", email = "h.furkan90@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.11",
]
# Runtime deps are managed by conda environments/*.yml; kept empty by design
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vlm_driving = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not carla and not vlm'"
markers = [
  "carla: tests that require CARLA PythonAPI or a running simulator",
  "vlm: tests that require GPU and real VLM weights",
]
